# esp-hal-mfrc522

./: Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
examples/: Cargo.toml  build.rs
examples/.cargo/: config.toml
examples/src/: main.rs
src/: consts.rs  debug.rs  drivers.rs  lib.rs  main.rs  mifare.rs  pcd.rs  picc.rs
