[package]
name = "esp-hal-mfrc522"
version = "0.2.1"
authors = ["filipton <filipton12@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Simple mfrc522 library for esp-hal (can be used on any hal that implements embedded-hal-async)"

[lib]

[dependencies]
embedded-hal-async = "1.0.0"
heapless = "0.8.0"
log = { version = "0.4.27" }
embassy-time = { version = "0.4.0", optional = true }

[features]
default = ["spi"]
spi = []
i2c = []
embassy-time = ["dep:embassy-time"]
