[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
# embassy-embedded-hal = "0.1.0"
# embedded-hal = "1.0.0"
# embedded-hal-async = "1.0.0"
embassy-executor = { version = "0.6.0", features = ["arch-riscv32"] }
embassy-time = "0.3.2"
esp-backtrace = { version = "0.14.1", features = [
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.20.1", features = [ "async", "embedded-hal" ] }
esp-hal-embassy = { version = "0.3.0", features = ["integrated-timers"] }
esp-println = { version = "0.11.0", features = ["log"] }
heapless = "0.8.0"
log = { version = "0.4.22" }
static_cell = { version = "2.1.0", features = ["nightly"] }
mfrc522-esp-hal = { path = "../", features = ["embassy-time"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[features]
default = ["esp32s3"]
esp32s3 = ["esp-backtrace/esp32s3", "esp-hal/esp32s3", "esp-hal-embassy/esp32s3", "esp-println/esp32s3"]
esp32c3 = ["esp-backtrace/esp32c3", "esp-hal/esp32c3", "esp-hal-embassy/esp32c3", "esp-println/esp32c3"]
