[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.6.3", features = ["arch-riscv32"] }
embassy-time = "0.3.2"
esp-backtrace = { version = "0.14.2", features = [
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.22.0", features = [] }
esp-hal-embassy = { version = "0.5.0", features = ["integrated-timers"] }
esp-println = { version = "0.12.0", features = ["log"] }
heapless = "0.8.0"
log = { version = "0.4.22" }
static_cell = { version = "2.1.0", features = ["nightly"] }
esp-hal-mfrc522 = { path = "../", features = ["embassy-time"] }
#adv-shift-registers = { path = "../../adv-shift-registers" }
embedded-hal = "1.0.0"
adv-shift-registers = "0.2.4"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[features]
default = ["esp32s3"]
esp32s3 = ["esp-backtrace/esp32s3", "esp-hal/esp32s3", "esp-hal-embassy/esp32s3", "esp-println/esp32s3"]
esp32c3 = ["esp-backtrace/esp32c3", "esp-hal/esp32c3", "esp-hal-embassy/esp32c3", "esp-println/esp32c3"]
